# zenboard

./: .gitignore
backend/: README.md  README_AUTH.md  README_upload.md  README_wechat_login.md  alembic.ini  check.py  check_db.py  check_tables.py  config.py  env.example  main.py  pyproject.toml  rebuild_database.py  start.sh  test_documents.py  zenboard.db
backend/api/: __init__.py  dependencies.py  main.py
backend/api/routers/: __init__.py  auth.py  comments.py  diaries.py  document.py  document_comments.py  documents.py  message.py  project.py  task.py  tasks.py  upload.py  wechat_auth.py
backend/api/schemas/: __init__.py  comment.py  diary.py  document.py  document_comment.py  message.py  project.py  response.py  task.py  upload.py  user.py  wechat.py  wechat_proxy.py
backend/database/: __init__.py  database.py
backend/migrations/: env.py
backend/migrations/versions/: 169bb9b4a827_add_comments.py  3a0efb12bc70_描述.py  3c57d24f3bcd_update_document_model_remove_visibility_.py  42fd2f8e52f7_描述.py  44a56be92116_描述.py  4b5bc4d5b171_20250812v1.py  6aaa2ec941d5_initial_migration.py  6b146b112c27_add_document_tables.py  7e47ea1c2376_add_document_tables1.py  (+9 more)
backend/models/: __init__.py  comment.py  diary.py  document.py  document_comment.py  login_session.py  message.py  project.py  project_membership.py  task.py  user.py
backend/services/: __init__.py  auth_service.py  comment_service.py  diary_service.py  document_comment_service.py  document_service.py  message_service.py  project_service.py  task_service.py  user_service.py  wechat_service.py
(+57 files in other folders)
